# Writing-validation

./: .gitignore  QWEN3_14B_최고점_전략_및_구현_계획.md  README.md  pyproject.toml
configs/: anchor_knn.yaml  assessment_questions.yaml  baselines.yaml  calibration.yaml  data.yaml  data_final_combined.yaml  inference_l40s.yaml  precision_comparison.yaml  rationale_judge.yaml  rationale_sft.yaml  scorer_qlora.yaml  stacker.yaml  tfidf_nested.yaml
dataset/: 글쓰기채점능력평가2026_validation.jsonl
docs/: SUBMISSION_RUNTIME.md
notebook/: 00_colab_environment_and_data.ipynb  01_zero_shot_baseline.ipynb  02_cpu_baselines.ipynb  03_qwen_scorer_training.ipynb  04_calibration_ensemble_inference.ipynb  05_rationale_and_finalization.ipynb  06_submission_and_tests.ipynb  90_optional_final_retraining.ipynb  99_all_in_one_colab_pipeline.ipynb  README.md
scripts/: apply_stacker.py  audit_data.py  bootstrap_compare.py  build_anchor_oof.py  build_final_combined_data.py  build_oof.py  build_precision_oof.py  build_rationale_review_pack.py  build_seed_ensemble_oof.py  build_silver_rationales.py  cache_assessment_logits.py  compare_precisions.py  evaluate_predictions.py  extract_embeddings.py  finalize_predictions.py  fit_assessment_branch.py  fit_calibrator.py  fit_stacker.py  generate_rationales.py  judge_rationales_local.py  make_folds.py  make_lopo_folds.py  orchestrate_scorer_training.py  package_submission.py  predict_anchor.py  predict_assessment_branch.py  predict_baseline.py  predict_scorer.py  reproduce_zero_shot.py  run_baselines.py  run_nested_tfidf.py  run_submission.py  (+4 more)
src/: __init__.py
(+105 files in other folders)
